--- a/WebTextEditor/Web.config
+++ b/WebTextEditor/Web.config
@@ -24,7 +24,7 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5" />
-    <httpRuntime targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" enableVersionHeader="false" />
   </system.web>
   <system.webServer>
     <modules>
@@ -37,6 +37,11 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*"
            type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+    <httpProtocol>
+      <customHeaders>
+        <remove name="X-Powered-By" />
+      </customHeaders>
+    </httpProtocol>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
