--- a/WebTextEditor/Web.config
+++ b/WebTextEditor/Web.config
@@ -99,7 +99,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <entityFramework>
+  <entityFramework codeConfigurationType="WebTextEditor.DAL.Configurations.DatabaseConfiguration, WebTextEditor.DAL">
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="mssqllocaldb" />
