#2 Add "new document" button into documents page Removed parameters for Web deploy

--- a/WebTextEditor/Web.config
+++ b/WebTextEditor/Web.config
@@ -12,7 +12,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection"
-         connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\aspnet-WebTextEditor-20150510102558.mdf;Initial Catalog=aspnet-WebTextEditor-20150510102558;Integrated Security=True"
+         connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\WebTextEditor.mdf;Initial Catalog=WebTextEditor;Integrated Security=True"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
