--- a/WebTextEditor.DAL/WebTextEditor.DAL.csproj
+++ b/WebTextEditor.DAL/WebTextEditor.DAL.csproj
@@ -91,11 +91,11 @@
     <Compile Include="Models\DocumentEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\DocumentContentRepository.cs" />
-    <Compile Include="Repositories\DocumentCollaboratorsRepository.cs" />
-    <Compile Include="Repositories\DocumentsRepository.cs" />
+    <Compile Include="Repositories\DocumentCollaboratorRepository.cs" />
+    <Compile Include="Repositories\DocumentRepository.cs" />
     <Compile Include="Repositories\IDocumentContentRepository.cs" />
-    <Compile Include="Repositories\IDocumentCollaboratorsRepository.cs" />
-    <Compile Include="Repositories\IDocumentsRepository.cs" />
+    <Compile Include="Repositories\IDocumentCollaboratorRepository.cs" />
+    <Compile Include="Repositories\IDocumentRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
