--- a/WebTextEditor.DAL.Sql/WebTextEditor.DAL.Sql.csproj
+++ b/WebTextEditor.DAL.Sql/WebTextEditor.DAL.Sql.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{08B1BB68-EFF1-4E8D-8859-9EA557B55CD2}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WebTextEditor.DAL</RootNamespace>
-    <AssemblyName>WebTextEditor.DAL</AssemblyName>
+    <RootNamespace>WebTextEditor.DAL.Sql</RootNamespace>
+    <AssemblyName>WebTextEditor.DAL.Sql</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -32,11 +32,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework">
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="EntityFramework.SqlServer">
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -86,22 +88,14 @@
       <DependentUpon>201505200217515_DocumentCollaboratorAutoIncrement.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Models\DocumentCollaboratorEntity.cs" />
-    <Compile Include="Models\DocumentContentEntity.cs" />
-    <Compile Include="Models\DocumentEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\DocumentContentRepository.cs" />
     <Compile Include="Repositories\DocumentCollaboratorRepository.cs" />
     <Compile Include="Repositories\DocumentRepository.cs" />
-    <Compile Include="Repositories\IDocumentContentRepository.cs" />
-    <Compile Include="Repositories\IDocumentCollaboratorRepository.cs" />
-    <Compile Include="Repositories\IDocumentRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201505162219046_Initial.resx">
@@ -128,6 +122,12 @@
     <EmbeddedResource Include="Migrations\201505200217515_DocumentCollaboratorAutoIncrement.resx">
       <DependentUpon>201505200217515_DocumentCollaboratorAutoIncrement.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WebTextEditor.DAL\WebTextEditor.DAL.csproj">
+      <Project>{875bddb3-fa36-4b65-a96e-d350ce0c95ea}</Project>
+      <Name>WebTextEditor.DAL</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
