--- a/WebTextEditor/packages.config
+++ b/WebTextEditor/packages.config
@@ -26,6 +26,9 @@
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
+  <package id="Microsoft.Data.Edm" version="5.6.4" targetFramework="net45" />
+  <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net45" />
+  <package id="Microsoft.Data.Services.Client" version="5.6.4" targetFramework="net45" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net45" />
@@ -36,6 +39,7 @@
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.1.0" targetFramework="net45" />
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
@@ -44,7 +48,10 @@
   <package id="SimpleInjector.Extensions.ExecutionContextScoping" version="2.8.0" targetFramework="net45" />
   <package id="SimpleInjector.Integration.WebApi" version="2.8.1" targetFramework="net45" />
   <package id="SimpleInjector.Integration.WebApi.WebHost.QuickStart" version="2.8.1" targetFramework="net45" />
+  <package id="System.Spatial" version="5.6.4" targetFramework="net45" />
   <package id="toastr" version="2.1.1" targetFramework="net45" />
   <package id="WebActivator" version="1.4.4" targetFramework="net45" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
+  <package id="WindowsAzure.Storage" version="4.3.0" targetFramework="net45" />
+  <package id="WindowsAzure.StorageExtensions" version="1.0.2" targetFramework="net45" />
 </packages>
