--- a/WebTextEditor/Web.config
+++ b/WebTextEditor/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|\WebTextEditor.mdf;Initial Catalog=WebTextEditor;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\WebTextEditor.mdf;Initial Catalog=WebTextEditor;Integrated Security=True" providerName="System.Data.SqlClient" />
     <add name="AzureStorageConnection" connectionString="UseDevelopmentStorage=true" />
   </connectionStrings>
   <appSettings>
