--- a/WebTextEditor/packages.config
+++ b/WebTextEditor/packages.config
@@ -1,57 +1,58 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AngularJS.Animate" version="1.3.15" targetFramework="net45" />
-  <package id="AngularJS.Core" version="1.3.15" targetFramework="net45" />
-  <package id="AngularJS.Resource" version="1.3.15" targetFramework="net45" />
-  <package id="AngularJS.Route" version="1.3.15" targetFramework="net45" />
-  <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
-  <package id="AutoMapper" version="3.3.1" targetFramework="net45" />
-  <package id="bootstrap" version="3.3.4" targetFramework="net45" />
-  <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
-  <package id="jQuery" version="2.1.4" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR" version="2.2.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.Core" version="2.2.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.JS" version="2.2.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.2.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
-  <package id="Microsoft.Data.Edm" version="5.6.4" targetFramework="net45" />
-  <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net45" />
-  <package id="Microsoft.Data.Services.Client" version="5.6.4" targetFramework="net45" />
-  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" />
-  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net45" />
-  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net45" />
-  <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net45" />
-  <package id="Microsoft.Owin.Security.Facebook" version="3.0.1" targetFramework="net45" />
-  <package id="Microsoft.Owin.Security.Google" version="3.0.1" targetFramework="net45" />
-  <package id="Microsoft.Owin.Security.MicrosoftAccount" version="3.0.1" targetFramework="net45" />
-  <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net45" />
-  <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net45" />
-  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.1.0" targetFramework="net45" />
-  <package id="Modernizr" version="2.8.3" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
-  <package id="Owin" version="1.0" targetFramework="net45" />
-  <package id="Respond" version="1.4.2" targetFramework="net45" />
-  <package id="SimpleInjector" version="2.8.0" targetFramework="net45" />
-  <package id="SimpleInjector.Extensions.ExecutionContextScoping" version="2.8.0" targetFramework="net45" />
-  <package id="SimpleInjector.Integration.WebApi" version="2.8.1" targetFramework="net45" />
-  <package id="SimpleInjector.Integration.WebApi.WebHost.QuickStart" version="2.8.1" targetFramework="net45" />
-  <package id="System.Spatial" version="5.6.4" targetFramework="net45" />
-  <package id="toastr" version="2.1.1" targetFramework="net45" />
-  <package id="WebActivator" version="1.4.4" targetFramework="net45" />
-  <package id="WebGrease" version="1.6.0" targetFramework="net45" />
-  <package id="WindowsAzure.Storage" version="4.3.0" targetFramework="net45" />
-  <package id="WindowsAzure.StorageExtensions" version="1.0.2" targetFramework="net45" />
+  <package id="AngularJS.Animate" version="1.3.15" targetFramework="net45" userInstalled="true" />
+  <package id="AngularJS.Core" version="1.3.15" targetFramework="net45" userInstalled="true" />
+  <package id="AngularJS.Resource" version="1.3.15" targetFramework="net45" userInstalled="true" />
+  <package id="AngularJS.Route" version="1.3.15" targetFramework="net45" userInstalled="true" />
+  <package id="Antlr" version="3.5.0.2" targetFramework="net45" userInstalled="true" />
+  <package id="AutoMapper" version="3.3.1" targetFramework="net45" userInstalled="true" />
+  <package id="bootstrap" version="3.3.4" targetFramework="net45" userInstalled="true" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net45" userInstalled="true" />
+  <package id="JasmineTest" version="2.2.0" targetFramework="net45" userInstalled="true" />
+  <package id="jQuery" version="2.1.4" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.AspNet.SignalR" version="2.2.0" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.2.0" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.2.0" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.2.0" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.3" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.3" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.Data.Edm" version="5.6.4" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.Data.Services.Client" version="5.6.4" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.Owin.Security.Facebook" version="3.0.1" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.Owin.Security.Google" version="3.0.1" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.Owin.Security.MicrosoftAccount" version="3.0.1" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" userInstalled="true" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.1.0" targetFramework="net45" userInstalled="true" />
+  <package id="Modernizr" version="2.8.3" targetFramework="net45" userInstalled="true" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" userInstalled="true" />
+  <package id="Owin" version="1.0" targetFramework="net45" userInstalled="true" />
+  <package id="Respond" version="1.4.2" targetFramework="net45" userInstalled="true" />
+  <package id="SimpleInjector" version="2.8.0" targetFramework="net45" userInstalled="true" />
+  <package id="SimpleInjector.Extensions.ExecutionContextScoping" version="2.8.0" targetFramework="net45" userInstalled="true" />
+  <package id="SimpleInjector.Integration.WebApi" version="2.8.1" targetFramework="net45" userInstalled="true" />
+  <package id="SimpleInjector.Integration.WebApi.WebHost.QuickStart" version="2.8.1" targetFramework="net45" userInstalled="true" />
+  <package id="System.Spatial" version="5.6.4" targetFramework="net45" userInstalled="true" />
+  <package id="toastr" version="2.1.1" targetFramework="net45" userInstalled="true" />
+  <package id="WebActivator" version="1.4.4" targetFramework="net45" userInstalled="true" />
+  <package id="WebGrease" version="1.6.0" targetFramework="net45" userInstalled="true" />
+  <package id="WindowsAzure.Storage" version="4.3.0" targetFramework="net45" userInstalled="true" />
+  <package id="WindowsAzure.StorageExtensions" version="1.0.2" targetFramework="net45" userInstalled="true" />
 </packages>
